<resources>
    <string name="app_name">HBDAY</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="texts">Texts</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="apr8">apr8</string>
    <string name="apr9">apr9</string>
    <string name="apr10">apr10</string>
    <string name="todo">TODO</string>
    <string name="april_8_to_may_8">April-8 to May-8</string>
    <string name="may_8_to_june_7">May-8 To June-7</string>
    <string name="_8th_june_2020">8th June 2020:</string>
    <string name="wtsptextmsg2020">‌Helloooo meri pyari bindu at last am glad nee bday kuda naa bday laaga intlone aithundi😂😂no party with friends nothing 😂but even when ur in home my best wishes and my love will always be there for you. You r the best person ever in my life. A friend and big sis who always make me be and do right, a cute little sister who always poke my back. 😂😂 I never ever in my life wanna loose you at any cost. I hurt you a lottt with my stupidity and outrageous behaviour but u\'ll be patient and malli excuse me. Your smile is like a million stars in the sky, just delightful for sight.😍 Always be happy nah please, I can\'t see u be sad a moment.😅 Missing u abbaaaa chusi chaala roojulu avthundi direct gaa, hope jaldi chusthaa ee lockdown tarvatha.😄 Haa nannu eppud marchipooku , yeah osthar chaala mandi in ur life who will be more important but still please rent me a little space permenantly in your heart. 😅😄😄 We\'ll do full fun when we be independent, and defenitely mee mummy ki oka rooju nene cheptha that leela is a boy ani.😂😂 Haa see l will not keep status for sure😌 bcoz I won\'t keep status of me anytime and \"you\" r a part of me, l keep bday status nly for friends or close friends 😂but you r not that, you r much more than that to me, u r like a part of my life. When ever you want any thing don\'t forget am there ri8 next to you, except gccf labs.🙏🙏😌😌😂😂 I didn\'t even wish till now😂😂. Many many many many many mannnyyy happy returns of the day happy birthday day happy born day happy everything for you. Hope u recive lots and lots of love and care from everyone everytime. May god bless you with love, health, wisdom, prosperity and good people always. Love you a lotttt ⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️⁩⁦♥️ don\'t forget that renting a little space thing for me 😝😂😂 Hapy birthday Have a grrreat day and a grreaaat life ahead. Love you ree😍😍⁦♥️⁩⁦♥️⁩😚😚🤗🤗</string>
    <string name="_27th_march_2021">27th March 2021</string>
    <string name="_27th_march2021">27th March 2021:</string>
    <string name="wtspmsg27mar2021">Naa deggara nuv edanna adgodhu ree, u shld order me etla ante galleeez ga order cheyyu ree naa meedha, masth cute untav. And the best wishes were urs with charan. antha dare cheshi mummy thoni dorkipoyyi u made for me assal thoop ree . Mee eddaru eppud atlanee undandi. Chaala baaguntaru mee eddaru 😘😘❤️❤️and assal ur r most beautiful person I ever met in my life and I\'ll nevver meet a person like u. Even if we r not connected daily I\'ll keep loving u for my entire life thallii..😁❤️And at last Thank you for everything u gave me.. assal nee mundu em oanki raav re🤦‍♂️thanks aithe suddha waste neek cheppi. Thanks scope kante baitak velpoinav. 😂 Chitti thalli I love you bangaram this is only for u....loads and loadz of love for u - from me 24x7 ❤️❤️❤️😘😘😘enka assal em sarpov re neek evanni aapesthunna ekkadkee 😂🥴 but I love you bangaram like hell and heaven. Don\'t leave me...😘😘😘😘❤️❤️❤️❤️ - love from Leela Krishna😂</string>
    <string name="wtspmsg27mar21">Areee bangaram this is the besssstessttt bday of my whole life till now. My life literally changed and became upside down bcoz of u. I got uncountable love from u which I didn\'t expect from any person in my life. Assal nen entha shitttt cheshna ur the only person who bare it. Assal nuv andarni great anadam kaadu maa, nuv chaalaa great. U have great power of bonding people together. Naa life motham ni books lo raasthe they\'ll be 2 books. 1st di normal life and 2nd dhi bindu...😌❤️ Assal I donno if I\'ll meet a person as amazing as u in my life ever again. Only thing I wanted to do now in my life is take care of u nothing more than that. I donno what to say now... U r my love, jaan, bangaram, bujji konda,bangar konda, kanna ,nana,chinna,chinnu enka enka enka anniiiii nuvveee maa naaku. I can\'t imagine any other person in ur place. Assal nee antha oopika evvarki untadhi re nannu bharisthunnav antee. Nen enni sarlu edpichina kani ull excuse me😘😘 assal evvar kaad ree great . Nuvve great. Naak masth ishtam re nuvvu . Pichi pichi ga ishtam. Every small thing about u naak ishtam . Okate ree please🙏🙏 don\'t leave me any time . Naa deggara nuv edanna adgodhu ree, u shld order me etla ante galleeez ga order cheyyu ree naa meedha, masth cute untav. And the best wishes were urs with charan. antha dare cheshi mummy thoni dorkipoyyi u made for me assal thoop ree . Mee eddaru eppud atlanee undandi. Chaala baaguntaru mee eddaru 😘😘❤️❤️and assal ur r most beautiful person I ever met in my life and I\'ll nevver meet a person like u. Even if we r not connected daily I\'ll keep loving u for my entire life thallii..😁❤️And at last Thank you for everything u gave me.. assal nee mundu em oanki raav re🤦‍♂️thanks aithe suddha waste neek cheppi. Thanks scope kante baitak velpoinav. 😂 Chitti thalli I love you bangaram this is only for u....loads and loadz of love for u - from me 24x7 ❤️❤️❤️😘😘😘enka assal em sarpov re neek evanni aapesthunna ekkadkee 😂🥴 but I love you bangaram like hell and heaven. Don\'t leave me...😘😘😘😘❤️❤️❤️❤️ - love from Leela Krishna😂</string>
    <string name="video">Video</string>
</resources>